# CompuCell3D

./: .#.gitignore  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION_POLICY.md  GOVERNANCE.md  README.rst  README_CompuCell3D_Community.md  StepLDF.dml  _settings.sqlite  azure-pipelines.yml  demo.py  fix_notebook_import.py  fix_validation.py  jupyter_deployment-Copy2.ipynb  quick_fix.py  self-assessment.md  test_backend_validation.py  test_final_summary.py
BionetSolver/0.0.6/: BionetSolverPy_winBinaries.nsi  CMakeLists.txt
BionetSolver/0.0.6/.svn/: all-wcprops  entries
BionetSolver/0.0.6/doc/: BionetSolver_0.0.6_MacOSX106.text  BionetSolver_QuickStartGuide.doc
BionetSolver/0.0.6/python/: BionetSolverPy.i  CMakeLists.txt  bionet.command  bionet.py  bionetAPI.py  bionetAPITest.py
CompuCell3D/: .gitignore  CMakeCache.txt  CMakeLists.txt  ChangeLog.txt  GPUEnabled.h  License.txt  Makefile  ReleaseNotes.rst  cmake_install.cmake  compile_commands.json  compucell3d_cmake_macros.cmake  osx_cmake_clion_cli.txt
CompuCell3D/CLI/: CC3DLauncher.py  CC3DProjectFileReader.py  CLISimulationLauncher.py  CommandLineArgumentParser.py  CompuCell3DCLI.py  GUISImulationLaucher.py  ParameterScanner.py  ParameterScannerExtensiveInput.py  ProjectFileStore.py  SimulationLauncher.py  SimulationLauncherFactory.py
CompuCell3D/CenterModel/: CMakeLists.txt  Simulator.cpp  Simulator.h  cells.txt  main.cpp  mainIntegrator.cpp  mainIntegratorNew.cpp  mainIntegratorNewSimple.cpp  mainVTK.cpp
CompuCell3D/DeveloperZone/: CMakeLists.txt  README.md  developer_zone_macros.cmake
CompuCell3D/Twedit++/: CMakeLists.txt  Configuration.py  CycleTabsPopup.py  DataSocketCommunicators.py  EditorWindow.py  KeyShortcut.py  KeyShortcut.ui  KeyboardShortcuts.ui  KeyboardShortcutsDlg.py  LanguageManager.py  PrinterTwedit.py  QsciScintillaCustom.py  ThemeManager.py  configurationdlg.py  configurationdlg.ui  findandreplacedlg.py  findinfiles.ui  gotolinedlg.py  gotolinedlg.ui  twedit_plus_plus_cc3d.py  twedit_plus_plus_rc.py  ui_KeyboardShortcuts.py  ui_configurationdlg.py  ui_findinfilesdlg.py  ui_gotolinedlg.py  windowsUtils.py
CompuCell3D/Twedit++5/: CMakeLists.txt  Configuration.py  CustomizationSummary_CC3D.txt  CycleTabsPopup.py  DOMUtils.py  DataSocketCommunicators.py  EditorWindow.py  KeyShortcut.py  KeyShortcut.ui  KeyboardShortcuts.ui  KeyboardShortcutsDlg.py  LanguageManager.py  PrinterTwedit.py  QsciScintillaCustom.py  README  ThemeManager.py  bringupTwedit.py  configurationdlg.py  configurationdlg.ui  findandreplacedlg.py  findinfiles.ui  gotolinedlg.py  gotolinedlg.ui  twedit_plus_plus.py  twedit_plus_plus.qrc  twedit_plus_plus.qrc.information  twedit_plus_plus_cc3d.py  twedit_plus_plus_rc.py  ucode_demo.py  ui_KeyShortcut.py  ui_KeyboardShortcuts.py  ui_gotolinedlg.py  windowsUtils.py
CompuCell3D/Twedit++5_py3/: Configuration.py  CycleTabsPopup.py  DOMUtils.py  DataSocketCommunicators.py  EditorWindow.py  KeyShortcut.py  KeyboardShortcutsDlg.py  LanguageManager.py  PrinterTwedit.py  QsciScintillaCustom.py  ThemeManager.py  bringupTwedit.py  configurationdlg.py  demo.py  findandreplacedlg.py  gotolinedlg.py  twedit_plus_plus.py  twedit_plus_plus_cc3d.py  twedit_plus_plus_rc.py  ui_KeyShortcut.py  ui_configurationdlg.py  windowsUtils.py
CompuCell3D/cmake/: cc3d-config.cmake
CompuCell3D/core/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  generate_xcode_project  install_full  install_linux.sh  testXML.py
CompuCell3D/docs/: CompuCell3D_release_notes.doc  build_CC3D_3.6.0_and_BionetSolver_for_MacOSX106.py  build_CC3D_3.6.0_distribution_on_MacOSX106.py
CompuCell3D/optimization/: CMakeLists.txt  Makefile  OptimizerWorkerProcessZMQ.py  Process.py  cmake_install.cmake  optimization.py
CompuCell3D/player/: CMakeLists.txt  DefaultData.py  ParameterScanRun.py  compucell3d.pyw  compucell3d_new.pyw
CompuCell3D/player5/: CMakeLists.txt  CompuCellPythonSimulationCML.py  __init__.py  compucell3d.pyw  compucell3d_new.pyw  compucell3d_orig.pyw  plugins.txt
CompuCell3D/post_install_tasks/: compucell3d.sh  paramScan.sh  runScript.sh  twedit++.sh
CompuCell3D/tests/: CompuCell3D  RandomNumberBenchmark.cpp  api_suite.py  demo_qnetwork.py  diffusion_solver_tester.py  simple_runner.py  simulation_tester.py  test_api.py  test_utils.py
RoadRunner/: CMakeLists.txt  ChangeLog.txt  License.txt  Readme.txt  ReadmeCC3D_build.txt
RoadRunner/Wrappers/: CMakeLists.txt
RoadRunner/apps/: CMakeLists.txt
RoadRunner/examples/: CMakeLists.txt  Examples.groupproj
RoadRunner/models/: CMakeLists.txt  bug.xml  settings_override.txt  simple.xml  squareWaveModel.xml  ss_TurnOnConservationAnalysis.xml  ss_threeSpecies.xml  ss_threestep.xml
RoadRunner/plugins/: All.groupproj  rr++.groupproj
RoadRunner/post_install_tasks/: CMakeLists.txt  RoadRunnerSetup.py  rrPython.bat.in.windows  rrPython.py  rrPython.sh.in.linux
RoadRunner/pyinterface/: CMakeLists.txt  swigmodifier.py
RoadRunner/source/: CMakeLists.txt  rrArrayList.cpp  rrArrayList.h  rrArrayList2.cpp  rrArrayList2.h  rrArrayListItem.cpp  rrArrayListItem.h  rrBaseParameter.cpp  rrBaseParameter.h  rrCGenerator.cpp  rrCGenerator.h  rrCSharpGenerator.cpp  rrCSharpGenerator.h  rrCVODEInterface.cpp  rrCVODEInterface.h  rrCapability.cpp  rrCapability.h  rrCapsSupport.cpp  rrCapsSupport.h  rrCodeBuilder.cpp  rrCodeBuilder.h  rrCodeTypes.cpp  rrCodeTypes.h  rrCompiler.cpp  rrCompiler.h  rrConfigure.h.in  rrConstants.cpp  rrConstants.h  rrDLLEntry.cpp  rrData.cpp  rrData.h  rrEvent.cpp  rrEvent.h  rrException.cpp  rrException.h  rrExporter.h  rrFileLog.cpp  rrFileLog.h  rrFileName.cpp  rrFileName.h  (+123 more)
RoadRunner/testing/: CMakeLists.txt  ModelSourceTest.c  ModelSourceTest.h  Test_1.xml  rrExcludedTestCases.txt
jni_test/: CMakeLists.txt
jni_test/jni_test/: CMakeLists.txt  classes.cpp  classes.h  classes.i  classes_wrap.cxx  dllDeclarationSpecifier.h  main.cpp
jni_test/run_files/: CalculatorPackageUser.bat  CalculatorPackageUser.java  CalculatorUser.java  main.bat  test_j.bat  test_j.py  test_j_swig.py
(+6716 files in other folders)
