


CMAKE_MINIMUM_REQUIRED(VERSION 2.2)
PROJECT(classes)

FIND_PACKAGE(JAVA REQUIRED)
FIND_PACKAGE(JNI REQUIRED)







include(${CMAKE_CURRENT_SOURCE_DIR}/FindSWIG.cmake) # this is slightly modified FindSWIG.cmake file -  had to tune it to work with OSX

FIND_PACKAGE(SWIG REQUIRED)


# INCLUDE(${SWIG_USE_FILE})
# INCLUDE(UseSWIGJava)
INCLUDE(UseSWIG)

# FIND_PACKAGE(PythonLibs)
# INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${JAVA_INCLUDE_PATH} ${JAVA_INCLUDE_PATH2})

# SET(PYINTERFACE_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

IF(SWIG_FOUND)

    add_subdirectory(jni_test)

ELSE(SWIG_FOUND)
    message("could not find SWIG in your system")
ENDIF(SWIG_FOUND)






